# ticket-organizer

./: .gitignore  README.md  pyproject.toml
ticket-organizer/: __main__.py  cli.py  config.py  create_yaml.py  logger.py  mail.py  otrs.py  read_yaml.py
